--- a/spring-jpa/src/main/resources/application.properties
+++ b/spring-jpa/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=${DATABASE_ROOT_USER:root}
 spring.datasource.password=${DATABASE_ROOT_USER:root@admin}
 
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
