--- a/spring-jpa/pom.xml
+++ b/spring-jpa/pom.xml
@@ -44,6 +44,12 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>15.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
