--- a/spring-jpa/src/main/resources/application.properties
+++ b/spring-jpa/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=9009
 
 # Need to create database manually
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST:127.0.0.1}:3306/course
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:course.crye3l1z0fcw.ap-south-1.rds.amazonaws.com}:3306/course
 spring.datasource.username=${DATABASE_ROOT_USER:root}
-spring.datasource.password=${DATABASE_ROOT_USER:root@admin}
+spring.datasource.password=${DATABASE_ROOT_USER:rootadmin}
 
 
 spring.jpa.hibernate.ddl-auto=create-drop
